[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[lib]
name = "hello"
path = "src/lib.rs"
crate-type =["cdylib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
#wasm-bindgen = {version = "^0.2", features = ["nightly"]}


[dependencies.web-sys]
version = "0.3.4"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window"
]
